Add final changes.

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <h1>Broadway Design</h1>
     <div id="menu">
       <nav>
-        <a href="#">Home</a> <br />
-        <a href="#">About</a> <br />
-        <a href="#">Work</a> <br />
-        <a href="#">Team</a> <br />
+        <a href="#">Home</a> <br /> <br />
+        <a href="#">About</a> <br /> <br />
+        <a href="#">Work</a> <br /> <br />
+        <a href="#">Team</a> <br /> <br />
         <a href="#">Contact</a> <br />
       </nav>
     </div>
@@ -50,9 +50,7 @@
 
   <!--Design-->
   <div id="design">
-    <p>
-      Designed in New York
-    </p>
+    <h2>Designed in New York</h2>
   </div>
 
   <!--Information-->
@@ -86,7 +84,7 @@
   <!--Footer Menu-->
   <div id="footer">
     <nav>
-      <p>&copy; Broadway 2017
+      <p><span>&copy; Broadway 2017</span>
         <a href="#menu">Home</a>
         <a href="#menu">About</a>
         <a href="#menu">Work</a>
